--- a/application/web/home/page.html
+++ b/application/web/home/page.html
@@ -1,5 +1,5 @@
 <!-- ==================================================================
-     📄 PAGE VIEW TEMPLATE — Ерөнхий контент үзүүлэх загвар
+     📄 PAGE VIEW TEMPLATE - Ерөнхий контент үзүүлэх загвар
      ------------------------------------------------------------------
      Энэ template нь “Ердийн хуудас (Page)” контентыг вэб дээр 
      харуулахад ашиглагдана.
@@ -7,10 +7,10 @@
      Контент нь PagesModel → HomeController::page() функцээр 
      дамжиж ирдэг. Дараах өгөгдлүүдийг хүлээн авна:
 
-       • title     — Хуудасны гарчиг
-       • content   — Эцсийн HTML контент (TinyMCE / SCEditor үүсгэсэн)
-       • photo     — Хэвлэлийн гол зураг (нэг ширхэг)
-       • files[]   — Хавсаргасан файлууд 
+       • title     - Хуудасны гарчиг
+       • content   - Эцсийн HTML контент (TinyMCE / SCEditor үүсгэсэн)
+       • photo     - Хэвлэлийн гол зураг (нэг ширхэг)
+       • files[]   - Хавсаргасан файлууд 
        • гэх мэтчилэн agesModel-ийн өгөглүүд
 
      Онцлог:
