--- a/application/dashboard/home/home.html
+++ b/application/dashboard/home/home.html
@@ -24,9 +24,8 @@
 <script type="text/javascript">
     // Жижиг туслах функц - цагийн дагуу мэндчилгээ сонгоно
     function getGreeting() {
-        let dd = new Date();
-        let hh = dd.getHours();
-
+        const dd = new Date();
+        const hh = dd.getHours();
         if (hh > 17) {
             return 'Good evening';
         } else if (hh > 11) {
