--- a/application/raptor/rbac/rbac-alias.html
+++ b/application/raptor/rbac/rbac-alias.html
@@ -223,7 +223,7 @@
              dashboard_log хүснэгтээс протоколыг AJAX-аар татаж,
              доод жагсаалтад үзүүлэх.
 
-        Хүмүүс customize хийхэд:
+        Хөгжүүлэгч өөрийн хүссэнээ customize хийхэд:
           - setRolePermission() доторх fetch URL, method, body-г өөрчилж болно
           - logger хэсгийн fetch параметрүүдийг өөрийн хүссэнээр
             (LIMIT, CONTEXT filter, ORDER BY) тохируулж өргөтгөх боломжтой.
@@ -240,11 +240,9 @@
          */
         const setRolePermission = function () {
             const requesting = document.querySelector('div.requesting');
-            if (requesting) {
-                requesting.style.display = 'block';
-            }
+            if (requesting) requesting.style.display = 'block';
 
-            let formData = new FormData();
+            const formData = new FormData();
             formData.append('role_id', this.getAttribute('role_id'));
             formData.append('permission_id', this.getAttribute('permission_id'));
             fetch(
@@ -254,29 +252,25 @@
                     body: formData
                 }
             ).then(res => {
-                let contentType = res.headers.get('content-type') || '';
-                if (contentType.includes('application/json')) {
-                    return res.json();
-                }
-                // JSON биш хүсэлт ирсэн бол алдааны object шиднэ
-                throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
+                const contentType = res.headers.get('content-type') || '';
+                if (contentType.includes('application/json')) return res.json();
+                // JSON биш бол алдаа
+                throw new Error(`HTTP ${res.status}: ${res.statusText}`);
             }).then(response => {
-                let type = response.type ?? 'warning';
-                let title = response.title ?? `{{ 'notice'|text|e }}`;
+                const type = response.type ?? 'warning';
+                const title = response.title ?? `{{ 'notice'|text|e }}`;
                 NotifyTop(type, title, response.message ?? 'Role permission set');
             }).catch(error => {
                 // Алдаа гарвал дээрх NotifyTop-оор хэрэглэгчид харуулна
                 NotifyTop('danger', `{{ 'error'|text }}`, error.message);
             }).finally(() => {
-                if (requesting) {
-                    requesting.style.display = 'none';
-                }
+                if (requesting) requesting.style.display = 'none';
             });
         };
 
         // Бүх role_permission checkbox-д click event bind хийх
-        var rolePermissionInputs = document.getElementsByClassName('role_permission');
-        for (var i = 0; i < rolePermissionInputs.length; i++) {
+        const rolePermissionInputs = document.getElementsByClassName('role_permission');
+        for (const i = 0; i < rolePermissionInputs.length; i++) {
             rolePermissionInputs[i].addEventListener('click', setRolePermission);
         }
 
@@ -292,12 +286,12 @@
             const logsViewLink = `{{ 'logs-view'|link }}`;
 
             // logger-dashboard → "dashboard" хэсгийг table parameter болгон ашиглана
-            let logger_id = logger.id ?? '';
-            let table = logger_id.substring(logger_id.indexOf('-') + 1);
+            const logger_id = logger.id ?? '';
+            const table = logger_id.substring(logger_id.indexOf('-') + 1);
             if (!table) return;
 
             logger.style.display = 'none';
-            let spinner = logger.previousElementSibling;
+            const spinner = logger.previousElementSibling;
             spinner.style.display = 'block';
 
             fetch(
@@ -327,10 +321,10 @@
                 logger.innerHTML = '';
 
                 // Нэг log дээр дарахад нээх modal-ийн URL загвар
-                let logModalLink = `${logsViewLink}?table=${table}&id=`;
+                const logModalLink = `${logsViewLink}?table=${table}&id=`;
 
                 Object.values(response).forEach(log => {
-                    let log_li = document.createElement('li');
+                    const log_li = document.createElement('li');
                     log_li.classList.add('list-group-item', 'list-group-item-action');
 
                     // Log level-ээр өнгө ялгах (Bootstrap list-group-item-* classes)
@@ -345,7 +339,7 @@
                     }
 
                     // [created_at] [id] дээр дарахад log modal нээнэ
-                    let a_link = document.createElement('a');
+                    const a_link = document.createElement('a');
                     a_link.textContent = `${log.created_at} [${log.id}]`;
                     a_link.href = logModalLink + log.id;
                     a_link.setAttribute('data-bs-target', '#static-modal');
@@ -358,13 +352,13 @@
                     log_li.appendChild(document.createTextNode(' '));
 
                     // Логийн үндсэн мессеж (context-тэй интерполяцлагдсан)
-                    let span_msg = document.createElement('span');
+                    const span_msg = document.createElement('span');
                     span_msg.innerHTML = log.message;
                     log_li.appendChild(span_msg);
                     log_li.appendChild(document.createTextNode(' '));
 
                     // Хэн (auth_user.username) ямар action хийснийг жижиг текстээр үзүүлэх
-                    let span_user_action = document.createElement('span');
+                    const span_user_action = document.createElement('span');
                     span_user_action.innerHTML =
                         `<span class="text-muted small"><u>${log.context.action ?? ''} by ${log.context.auth_user?.username ?? ''}</u></span>`;
                     span_user_action.classList.add('text-muted', 'small');
