--- a/application/raptor/rbac/rbac-insert-role-modal.html
+++ b/application/raptor/rbac/rbac-insert-role-modal.html
@@ -135,11 +135,9 @@
             ).then(res => {
                 // JSON хариуг шалгах
                 let contentType = res.headers.get('content-type') || '';
-                if (contentType.includes('application/json')) {
-                    return res.json();
-                }
-
-                throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
+                if (contentType.includes('application/json')) return res.json();
+                // JSON биш бол алдаа
+                throw new Error(`HTTP ${res.status}: ${res.statusText}`);
             }).then(response => {
                 // Алдааг шалгах
                 if (response.status !== 'success') {
