--- a/application/raptor/authentication/login-reset-password.html
+++ b/application/raptor/authentication/login-reset-password.html
@@ -82,7 +82,7 @@
         </div>
         <script type="text/javascript">
             if (localStorage.getItem('data-bs-theme') === 'dark') {
-                // LocalStorage-т хадгалсан theme-г автоматаар хэрэглэнэ
+                /* LocalStorage-т хадгалсан theme-г автоматаар хэрэглэнэ */
                 document.body.setAttribute('data-bs-theme', 'dark');
             }
         </script>
