--- a/application/web/home/page.html
+++ b/application/web/home/page.html
@@ -78,7 +78,7 @@
 <script type="text/javascript">
     document.addEventListener('DOMContentLoaded', function () {
         Fancybox.bind('[file-data-fancybox]', {
-            groupAll: true  // Нэгээс олон зураг байвал slideshow болно
+            groupAll: true  /* Нэгээс олон зураг байвал slideshow болно */
         });
     });
 </script>
