--- a/application/raptor/rbac/rbac-insert-role-modal.html
+++ b/application/raptor/rbac/rbac-insert-role-modal.html
@@ -95,21 +95,21 @@
 
     const formInsert = document.querySelector('form#rbac_role_insert');
     if (!formInsert) {
-        // Form олдохгүй бол хэрэглэгчид мэдэгдэнэ
+        /* Form олдохгүй бол хэрэглэгчид мэдэгдэнэ */
         NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
     } else {
-        // Submit товч → requestSubmit() ашиглана
+        /* Submit товч → requestSubmit() ашиглана */
         const submitter = document.querySelector('button.submit-new-role');
         submitter.addEventListener('click', function (e) {
             e.preventDefault();
             formInsert.requestSubmit();
         });
 
-        // Form submit event
+        /* Form submit event */
         formInsert.addEventListener('submit', function (event) {
             event.preventDefault();
 
-            // HTML5 form validation
+            /* HTML5 form validation */
             const _valid = this.checkValidity();
             this.classList.add('was-validated');
             if (!_valid) {
@@ -121,11 +121,11 @@
                 );
             }
 
-            // Button animation (growNstop → custom function)
+            /* Button animation (growNstop → custom function) */
             submitter.growNstop();
 
             const data = new FormData(this);
-            // AJAX POST → сервер лүү илгээх
+            /* AJAX POST → сервер лүү илгээх */
             fetch(
                 this.action,
                 {
@@ -133,18 +133,18 @@
                     method: this.getAttribute('method') ?? 'POST'
                 }
             ).then(res => {
-                // JSON хариуг шалгах
+                /* JSON хариуг шалгах */
                 let contentType = res.headers.get('content-type') || '';
                 if (contentType.includes('application/json')) return res.json();
-                // JSON биш бол алдаа
+                /* JSON биш бол алдаа */
                 throw new Error(`HTTP ${res.status}: ${res.statusText}`);
             }).then(response => {
-                // Алдааг шалгах
+                /* Хариуг шалгах */
                 if (response.status !== 'success') {
                     throw new Error(response.message ? response.message : 'Invalid response!');
                 }
 
-                // Role амжилттай бүртгэгдсэн → хуудсыг refresh
+                /* Role амжилттай бүртгэгдсэн → хуудсыг refresh */
                 window.location.reload();
 
                 NotifyTop(
@@ -153,7 +153,7 @@
                     response.message ?? 'Role created'
                 );
             }).catch(error => {
-                // Алдааны мэдэгдэл
+                /* Алдааны мэдэгдэл */
                 NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
                 submitter.growNstop();
             });
