--- a/application/raptor/user/user-set-password-modal.html
+++ b/application/raptor/user/user-set-password-modal.html
@@ -1,79 +1,160 @@
+<!-- Хэрэглэгчийн нууц үг шинэчлэх Modal
+     Password reset form (Admin → User password change) -->
 <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
+
+        <!-- Modal Header — Гарчиг + X товч -->
         <div class="modal-header">
             <h3 class="modal-title fs-6">
                 <i class="bi bi-key-fill"></i> {{ 'password-reset'|text }}
             </h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
+
+            <!-- Modal хаах товч -->
+            <button class="btn-close"
+                    type="button"
+                    data-bs-dismiss="modal"
+                    aria-label="{{ 'close'|text|e }}">
+            </button>
         </div>
+
+        <!-- Modal Body — Password form -->
         <div class="modal-body">
-            <form autocomplete="off" id="set_user_password" role="form" action="{{ 'user-set-password'|link({'id':profile['id']}) }}" method="POST" enctype="multipart/form-data">
+
+            <!-- Нууц үг шинэчлэх FORM -->
+            <form autocomplete="off"
+                  id="set_user_password"
+                  role="form"
+                  action="{{ 'user-set-password'|link({'id':profile['id']}) }}"
+                  method="POST"
+                  enctype="multipart/form-data">
+
                 <div class="form-group">
-                    <label>{{ 'username'|text }}: <strong>{{ profile['username'] }}</strong> ({{ profile['first_name'] }} {{ profile['last_name'] }})</label>
+
+                    <!-- Хэрэглэгчийн үндсэн мэдээллийг харуулах -->
+                    <label>
+                        {{ 'username'|text }}:
+                        <strong>{{ profile['username'] }}</strong>
+                        ({{ profile['first_name'] }} {{ profile['last_name'] }})
+                    </label>
+
+                    <!-- Шинэ нууц үг -->
                     <label class="mt-3">{{ 'set-new-password'|text }}</label>
-                    <input class="form-control mt-3 mb-2" required type="password" placeholder="{{ 'new-password'|text|e }}" name="password" autocomplete="password_new-complete">
-                    <input class="form-control mb-3" required type="password" placeholder="{{ 'retype-new-password'|text|e }}" name="password_retype" autocomplete="password_retype-complete">
+
+                    <input class="form-control mt-3 mb-2"
+                           required
+                           type="password"
+                           placeholder="{{ 'new-password'|text|e }}"
+                           name="password"
+                           autocomplete="password_new-complete">
+
+                    <!-- Шинэ нууц үг давтах -->
+                    <input class="form-control mb-3"
+                           required
+                           type="password"
+                           placeholder="{{ 'retype-new-password'|text|e }}"
+                           name="password_retype"
+                           autocomplete="password_retype-complete">
+
                 </div>
+
             </form>
         </div>
+
+        <!-- Modal Footer — Save / Cancel -->
         <div class="modal-footer">
+
+            <!-- Хадгалах товч -->
             <button class="submit-password btn btn-primary shadow-sm">
                 <i class="bi bi-check"></i> {{ 'save'|text }}
             </button>
-            <button class="btn btn-secondary shadow-sm" data-bs-dismiss="modal" type="button">
+
+            <!-- Болих -->
+            <button class="btn btn-secondary shadow-sm"
+                    data-bs-dismiss="modal"
+                    type="button">
                 {{ 'cancel'|text }}
             </button>
+
         </div>
     </div>
 </div>
+
 <script type="text/javascript">
-    const passwordForm = document.querySelector('form#set_user_password');
-    if (!passwordForm) {
-        NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
-    } else {
-        const submitter = document.querySelector('button.submit-password');
-        submitter.addEventListener('click', function (e) {
-            e.preventDefault();
-            passwordForm.requestSubmit();
-        });
+/* Password Reset Form Logic */
 
-        passwordForm.addEventListener('submit', function (event) {
-            event.preventDefault();
+/* Form элемент */
+const passwordForm = document.querySelector('form#set_user_password');
 
-            const _valid = this.checkValidity();
-            this.classList.add('was-validated');
-            if (!_valid) {
-                event.stopPropagation();
-                return NotifyTop('danger', `{{ 'error'|text|e }}`, `{{ 'u-have-some-form-errors'|text|e }}`);
+if (!passwordForm) {
+    /* Хэрэв form олдохгүй бол алдаа харуулах */
+    NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
+} else {
+    /* Save товч */
+    const submitter = document.querySelector('button.submit-password');
+
+    /* Save товч → form.requestSubmit() */
+    submitter.addEventListener('click', function (e) {
+        e.preventDefault();
+        passwordForm.requestSubmit();
+    });
+
+    /* FORM submit event */
+    passwordForm.addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        /* HTML5 validation шалгалт */
+        const isValid = this.checkValidity();
+        this.classList.add('was-validated');
+
+        if (!isValid) {
+            event.stopPropagation();
+            return NotifyTop(
+                'danger',
+                `{{ 'error'|text|e }}`,
+                `{{ 'u-have-some-form-errors'|text|e }}`
+            );
+        }
+
+        /* Ажиллаж буй эффектийг харуулах */
+        submitter.growNstop();
+
+        /* FormData бэлдэх */
+        const data = new FormData(this);
+
+        /* fetch ашиглан backend рүү UPDATE илгээх */
+        fetch(this.action, {
+            body: data,
+            method: this.getAttribute('method') ?? 'POST'
+        })
+        .then(res => {
+            /* Хариу JSON эсэхийг шалгах */
+            const contentType = res.headers.get('content-type') || '';
+            if (contentType.includes('application/json')) return res.json();
+
+            throw new Error(`HTTP [${res.status}]: ${res.statusText}`);
+        })
+        .then(response => {
+            /* Backend business алдаа */
+            if (response.status !== 'success') {
+                throw new Error(response.message || 'Invalid response!');
             }
 
+            /* Амжилттай → хуудсыг дахин ачаалах */
+            window.location.reload();
+
+            NotifyTop(
+                response.type ?? 'success',
+                response.title ?? `{{ 'success'|text|e }}`,
+                response.message ?? 'User password set'
+            );
+        })
+        .catch(error => {
+            /* Алдаа гарсан үед */
+            NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
+
+            /* Анимэйшн зогсоох */
             submitter.growNstop();
-
-            const data = new FormData(this);
-            fetch(
-                this.action,
-                {
-                    body: data,
-                    method: this.getAttribute('method') ?? 'POST'
-                }
-            ).then(res => {
-                let contentType = res.headers.get('content-type') || '';
-                if (contentType.includes('application/json')) {
-                    return res.json();
-                }
-                throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
-            }).then(response => {
-                if (response.status !== 'success') {
-                    throw new Error(response.message ? response.message : 'Invalid response!');
-                }
-
-                window.location.reload();
-
-                NotifyTop(response.type ?? 'success', response.title ?? `{{ 'success'|text|e }}`, response.message ?? 'User password set');
-            }).catch(error => {
-                NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
-                submitter.growNstop();
-            });
         });
-    }
+    });
+}
 </script>
