--- a/application/raptor/user/user-set-role-modal.html
+++ b/application/raptor/user/user-set-role-modal.html
@@ -1,92 +1,170 @@
+<!-- Хэрэглэгчийн ROLE (Дүр) тохируулах Modal
+     Admin → User access / permission update -->
 <div class="modal-lg modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
+
+        <!-- Modal Header — Гарчиг + Хаах товч -->
         <div class="modal-header">
             <h3 class="modal-title fs-6">
                 <i class="bi bi-shield-lock-fill"></i> {{ 'role'|text }}
             </h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
+
+            <button class="btn-close"
+                    type="button"
+                    data-bs-dismiss="modal"
+                    aria-label="{{ 'close'|text|e }}"></button>
         </div>
+
+        <!-- Modal Body — ROLE сонгох форм -->
         <div class="modal-body">
-            <form autocomplete="off" id="set_user_role" role="form" action="{{ 'user-set-role'|link({'id':profile['id']}) }}" method="POST" enctype="multipart/form-data">
+
+            <!-- ROLE тохируулах FORM -->
+            <form autocomplete="off"
+                  id="set_user_role"
+                  role="form"
+                  action="{{ 'user-set-role'|link({'id':profile['id']}) }}"
+                  method="POST"
+                  enctype="multipart/form-data">
+
+                <!-- Доторх хэсэг scroll-той -->
                 <div style="height:400px;overflow-y:auto;overflow-x:hidden;">
+
                     <div class="form-group">
-                        <label>{{ profile['first_name'] ~ ' ' ~ profile['last_name'] ~ ' (' ~ profile['username'] ~ ' => ' ~ profile['email'] ~ ')' }} хэрэглэгчийн дүрийг сонгон тохируулна уу!</label>
-                        <select class="form-control" multiple name="roles[]" id="user_roles">
+
+                        <!-- Хэрэглэгчийн мэдээлэл -->
+                        <label>
+                            {{ profile['first_name'] ~ ' ' ~ profile['last_name'] ~
+                               ' (' ~ profile['username'] ~ ' => ' ~ profile['email'] ~ ')' }}
+                            хэрэглэгчийн дүрийг сонгон тохируулна уу!
+                        </label>
+
+                        <!-- ROLE олон сонголттой select -->
+                        <select class="form-control"
+                                multiple
+                                name="roles[]"
+                                id="user_roles">
+
                             {% for key,data in roles %}
                                 <optgroup label="{{ rbacs[key]|e }}" alias="{{ key|e }}">
                                     {% for value,name in data %}
-                                        <option value="{{ value|e }}"{% if value in current_role %} selected{% endif %}>[{{ name[0]|e }}] {{ name[1]|e }}</option>
+                                        <option value="{{ value|e }}"
+                                                {% if value in current_role %}selected{% endif %}>
+                                            [{{ name[0]|e }}] {{ name[1]|e }}
+                                        </option>
                                     {% endfor %}
                                 </optgroup>
                             {% endfor %}
+
                         </select>
                     </div>
+
                 </div>
             </form>
         </div>
+
+        <!-- Modal Footer — Save / Cancel -->
         <div class="modal-footer">
+
+            <!-- Хадгалах -->
             <button class="submit-user-role btn btn-dark shadow-sm">
                 <i class="bi bi-check"></i> {{ 'save'|text }}
             </button>
-            <button class="btn btn-secondary shadow-sm" data-bs-dismiss="modal" type="button">
+
+            <!-- Болих -->
+            <button class="btn btn-secondary shadow-sm"
+                    data-bs-dismiss="modal"
+                    type="button">
                 {{ 'cancel'|text }}
             </button>
+
         </div>
     </div>
 </div>
+
 <script type="text/javascript">
-    const userRoles = document.getElementById('user_roles');
-    if (userRoles) {
-        new Choices(userRoles, {removeItemButton: true});
-    }
-    
-    const userRolesForm = document.querySelector('form#set_user_role');
-    if (!userRolesForm) {
-        NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
-    } else {
-        const submitter = document.querySelector('button.submit-user-role');
-        submitter.addEventListener('click', function (e) {
-            e.preventDefault();
-            userRolesForm.requestSubmit();
-        });
+/* Choices.js ашиглан олон сонголттой select сайжруулах */
+const userRoles = document.getElementById('user_roles');
+if (userRoles) {
+    new Choices(userRoles, { removeItemButton: true });
+}
 
-        userRolesForm.addEventListener('submit', function (event) {
-            event.preventDefault();
+/* FORM submit логик */
+const userRolesForm = document.querySelector('form#set_user_role');
 
-            const _valid = this.checkValidity();
-            this.classList.add('was-validated');
-            if (!_valid) {
-                event.stopPropagation();
-                return NotifyTop('danger', `{{ 'error'|text|e }}`, `{{ 'u-have-some-form-errors'|text|e }}`);
+if (!userRolesForm) {
+
+    /* Form олдохгүй бол алдаа */
+    NotifyTop('danger', `{{ 'error'|text|e }}`, 'Form not found!');
+
+} else {
+
+    /* "Save" товч */
+    const submitter = document.querySelector('button.submit-user-role');
+
+    /* Save товч → form.requestSubmit() */
+    submitter.addEventListener('click', function (e) {
+        e.preventDefault();
+        userRolesForm.requestSubmit();
+    });
+
+    /* FORM submit event */
+    userRolesForm.addEventListener('submit', function (event) {
+        event.preventDefault();
+
+        /* HTML built-in validation */
+        const isValid = this.checkValidity();
+        this.classList.add('was-validated');
+
+        if (!isValid) {
+            event.stopPropagation();
+            return NotifyTop(
+                'danger',
+                `{{ 'error'|text|e }}`,
+                `{{ 'u-have-some-form-errors'|text|e }}`
+            );
+        }
+
+        /* Loading animation */
+        submitter.growNstop();
+
+        /* FormData бэлдэх */
+        const data = new FormData(this);
+
+        /* fetch API → backend рүү илгээх */
+        fetch(this.action, {
+            body: data,
+            method: this.getAttribute('method') ?? 'POST'
+        })
+        .then(res => {
+            const contentType = res.headers.get('content-type') || '';
+            /* JSON хариу хүлээх */
+            if (contentType.includes('application/json')) return res.json();
+
+            /* JSON биш → алдаа */
+            throw new Error(`HTTP [${res.status}]: ${res.statusText}`);
+        })
+        .then(response => {
+            /* Backend амжилтгүй хариу */
+            if (response.status !== 'success') {
+                throw new Error(response.message || 'Invalid response!');
             }
 
+            /* Амжилттай → Хуудсыг refresh хийх */
+            window.location.reload();
+
+            NotifyTop(
+                response.type ?? 'success',
+                response.title ?? `{{ 'success'|text|e }}`,
+                response.message ?? 'User role set'
+            );
+        })
+        .catch(error => {
+            /* Алдаа гарвал */
+            NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
+
+            /* Loading эффектийг зогсоох */
             submitter.growNstop();
-
-            const data = new FormData(this);
-            fetch(
-                this.action,
-                {
-                    body: data,
-                    method: this.getAttribute('method') ?? 'POST'
-                }
-            ).then(res => {
-                let contentType = res.headers.get('content-type') || '';
-                if (contentType.includes('application/json')) {
-                    return res.json();
-                }
-                throw new Error("HTTP [{0}]: {1}".format(res.status, res.statusText));
-            }).then(response => {
-                if (response.status !== 'success') {
-                    throw new Error(response.message ? response.message : 'Invalid response!');
-                }
-
-                window.location.reload();
-
-                NotifyTop(response.type ?? 'success', response.title ?? `{{ 'success'|text|e }}`, response.message ?? 'User role set');
-            }).catch(error => {
-                NotifyTop('danger', `{{ 'error'|text|e }}`, error.message);
-                submitter.growNstop();
-            });
         });
-    }
+    });
+}
 </script>
