--- a/application/raptor/user/user-view.html
+++ b/application/raptor/user/user-view.html
@@ -1,124 +1,184 @@
+<!-- Хэрэглэгчийн дэлгэрэнгүй мэдээллийн толгой хэсэг
+     Зүүн талд - Нэр, Баруун талд - Хэрэглэгчдийн жагсаалт руу буцах товч -->
 <div class="d-flex flex-wrap justify-content-between align-items-center text-uppercase rounded p-1 mb-2 shadow">
     <h3 class="px-2 my-auto fs-6 text-info">
-        <i class="bi bi-person-circle"></i> {{ record['first_name'] ~ ' ' ~ record['last_name'] }}
+        <i class="bi bi-person-circle"></i>
+        {{ record['first_name'] ~ ' ' ~ record['last_name'] }}
     </h3>
+
     <div class="ms-auto">
         {% if user.can('system_user_index') %}
+        <!-- Хэрэглэгчдийн жагсаалт руу буцах -->
         <a class="btn btn-sm btn-info shadow-sm" href="{{ 'users'|link }}">
             <i class="bi bi-arrow-left"></i> {{ 'users'|text }}
         </a>
         {% endif %}
     </div>
 </div>
+
+<!-- Хэрэглэгчийн ID -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">ID</label>
+    <label class="col-3 col-form-label text-end">ID</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['id'] }}" type="number">
     </div>
 </div>
+
+<!-- Нэвтрэх нэр (username) -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'login'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'login'|text }}</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['username']|e }}" type="text">
     </div>
 </div>
+
+<!-- Хэрэглэгчийн нэр (first name) -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'firstname'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'firstname'|text }}</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['first_name']|e }}" type="text">
     </div>
 </div>
+
+<!-- Хэрэглэгчийн овог (last name) -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'lastname'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'lastname'|text }}</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['last_name']|e }}" type="text">
     </div>
 </div>
+
+<!-- Хэрэглэгчийн зураг (байгаа эсэхээс хамааран харуулна) -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'photo'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'photo'|text }}</label>
     <div class="col-9">
+
         {% if record['photo'] is not empty %}
-            <div class="text-start">
-                <img class="img-fluid img-thumbnail mb-1" 
-                     src="{{ record['photo']|e }}" 
-                     style="max-height:480px;">
-                {% if record['photo_size'] is not empty %}
-                    <div class="text-muted small">
-                        {{ (record['photo_size'] / 1024)|number_format(1, '.', ',') }} KB
-                    </div>
-                {% endif %}
+        <!-- Хэрэв зураг байгаа бол урьдчилсан харагдац + хэмжээ -->
+        <div class="text-start">
+            <img class="img-fluid img-thumbnail mb-1"
+                 src="{{ record['photo']|e }}"
+                 style="max-height:480px;">
+
+            {% if record['photo_size'] is not empty %}
+            <div class="text-muted small">
+                {{ (record['photo_size'] / 1024)|number_format(1, '.', ',') }} KB
             </div>
+            {% endif %}
+        </div>
+
         {% else %}
-            <i class="bi bi-person-bounding-box text-secondary" style="font-size:2rem"></i>
+        <!-- Хэрэв зураг байхгүй бол placeholder icon -->
+        <i class="bi bi-person-bounding-box text-secondary" style="font-size:2rem"></i>
         {% endif %}
     </div>
 </div>
+
+<!-- И-мэйл -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'email'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'email'|text }}</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['email']|e }}" type="text">
     </div>
 </div>
+
+<!-- Утасны дугаар -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'telephone'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'telephone'|text }}</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['phone']|e }}" type="text">
     </div>
 </div>
+
+<!-- Хэрэглэгчийн харьяалагдах байгууллагууд (badge хэлбэрээр) -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'organization'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'organization'|text }}</label>
     <div class="col-9">
+
         <div class="form-control">
             {% for org in organizations %}
-                <a class="badge bg-{{ org['alias'] == 'system' ? 'primary' : 'info' }} text-decoration-none fw-normal shadow-sm" href="{{ 'organizations'|link }}/view/{{ org['id'] }}" data-bs-target="#static-modal" data-bs-toggle="modal">
+                <a class="badge bg-{{ org['alias'] == 'system' ? 'primary' : 'info' }}
+                           text-decoration-none fw-normal shadow-sm"
+                   href="{{ 'organizations'|link }}/view/{{ org['id'] }}"
+                   data-bs-target="#static-modal"
+                   data-bs-toggle="modal">
                     {{ org['name'] }}
                 </a>
             {% endfor %}
         </div>
+
     </div>
 </div>
+
+<!-- Хэрэглэгчийн роль / эрхүүд (badge маягаар) -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'role'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'role'|text }}</label>
     <div class="col-9">
+
         <div class="form-control">
             {% for role in roles %}
-                <a class="badge bg-{{ role['name'] == 'system_coder' ? 'primary' : 'warning' }} text-decoration-none fw-normal shadow-sm" href="{{ 'rbac-role-view'|link }}?role={{ role['name'] }}" data-bs-target="#static-modal" data-bs-toggle="modal">
+                <a class="badge bg-{{ role['name'] == 'system_coder' ? 'primary' : 'warning' }}
+                           text-decoration-none fw-normal shadow-sm"
+                   href="{{ 'rbac-role-view'|link }}?role={{ role['name'] }}"
+                   data-bs-target="#static-modal"
+                   data-bs-toggle="modal">
                     {{ role['name'] }}
                 </a>
             {% endfor %}
         </div>
+
     </div>
 </div>
+
+<!-- Хэрэв хэрэглэгч идэвхгүй (deactivated) бол статус харуулах -->
 {% if record['is_active'] == 0 %}
 <div class="row mb-2 mt-3">
-    <label class="col-3 col-form-label text-end text-end">{{ 'status'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'status'|text }}</label>
     <div class="col-9">
-        <span class="badge bg-danger" aria-describedby="activeHelpBlock">{{ localization.code == 'mn' ? 'устгагдсан' : 'deactivated' }}</span>
-        <div class="form-text" id="activeHelpBlock">{{ 'active-user-can-login'|text }}</div>
+        <span class="badge bg-danger" aria-describedby="activeHelpBlock">
+            {{ localization.code == 'mn' ? 'устгагдсан' : 'deactivated' }}
+        </span>
+        <div class="form-text" id="activeHelpBlock">
+            {{ 'active-user-can-login'|text }}
+        </div>
     </div>
 </div>
 {% endif %}
+
+<!-- Үүсгэсэн огноо -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'date-created'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'date-created'|text }}</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['created_at']|e }}" type="text">
     </div>
 </div>
+
+<!-- Үүсгэсэн хэрэглэгч -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'created-by'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'created-by'|text }}</label>
     <div class="col-9">
-        <input class="form-control" disabled value="{{ (record['rbac_users'][record['created_by']] ?? record['created_by'])|e }}" type="text">
+        <input class="form-control"
+               disabled
+               value="{{ (record['rbac_users'][record['created_by']] ?? record['created_by'])|e }}"
+               type="text">
     </div>
 </div>
+
+<!-- Засварласан огноо -->
 <div class="row mb-2">
-    <label class="col-3 col-form-label text-end text-end">{{ 'date-modified'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'date-modified'|text }}</label>
     <div class="col-9">
         <input class="form-control" disabled value="{{ record['updated_at']|e }}" type="text">
     </div>
 </div>
+
+<!-- Засварласан хэрэглэгч -->
 <div class="row">
-    <label class="col-3 col-form-label text-end text-end">{{ 'updated-by'|text }}</label>
+    <label class="col-3 col-form-label text-end">{{ 'updated-by'|text }}</label>
     <div class="col-9">
-        <input class="form-control" disabled value="{{ (record['rbac_users'][record['updated_by']] ?? record['updated_by'])|e }}" type="text">
+        <input class="form-control"
+               disabled
+               value="{{ (record['rbac_users'][record['updated_by']] ?? record['updated_by'])|e }}"
+               type="text">
     </div>
 </div>
