--- a/application/raptor/user/user-set-organization-modal.html
+++ b/application/raptor/user/user-set-organization-modal.html
@@ -3,7 +3,7 @@
 <div class="modal-lg modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
 
-        <!-- Modal Header — Гарчиг + X товч -->
+        <!-- Modal Header - Гарчиг + X товч -->
         <div class="modal-header">
             <h3 class="modal-title fs-6 text-uppercase">
                 {{ 'organization'|text }}
@@ -14,7 +14,7 @@
                     aria-label="{{ 'close'|text|e }}"></button>
         </div>
 
-        <!-- Modal Body — Form хэсэг -->
+        <!-- Modal Body - Form хэсэг -->
         <div class="modal-body">
 
             <!-- Хэрэглэгчийн байгууллага тохируулах FORM -->
@@ -55,7 +55,7 @@
             </form>
         </div>
 
-        <!-- Modal Footer — Save / Cancel -->
+        <!-- Modal Footer - Save / Cancel -->
         <div class="modal-footer">
             <!-- Хадгалах товч -->
             <button class="submit-set-organization btn btn-dark shadow-sm">
