--- a/application/raptor/user/user-set-password-modal.html
+++ b/application/raptor/user/user-set-password-modal.html
@@ -3,7 +3,7 @@
 <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
 
-        <!-- Modal Header — Гарчиг + X товч -->
+        <!-- Modal Header - Гарчиг + X товч -->
         <div class="modal-header">
             <h3 class="modal-title fs-6">
                 <i class="bi bi-key-fill"></i> {{ 'password-reset'|text }}
@@ -17,7 +17,7 @@
             </button>
         </div>
 
-        <!-- Modal Body — Password form -->
+        <!-- Modal Body - Password form -->
         <div class="modal-body">
 
             <!-- Нууц үг шинэчлэх FORM -->
@@ -60,7 +60,7 @@
             </form>
         </div>
 
-        <!-- Modal Footer — Save / Cancel -->
+        <!-- Modal Footer - Save / Cancel -->
         <div class="modal-footer">
 
             <!-- Хадгалах товч -->
