--- a/application/raptor/user/user-set-role-modal.html
+++ b/application/raptor/user/user-set-role-modal.html
@@ -3,7 +3,7 @@
 <div class="modal-lg modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
 
-        <!-- Modal Header — Гарчиг + Хаах товч -->
+        <!-- Modal Header - Гарчиг + Хаах товч -->
         <div class="modal-header">
             <h3 class="modal-title fs-6">
                 <i class="bi bi-shield-lock-fill"></i> {{ 'role'|text }}
@@ -15,7 +15,7 @@
                     aria-label="{{ 'close'|text|e }}"></button>
         </div>
 
-        <!-- Modal Body — ROLE сонгох форм -->
+        <!-- Modal Body - ROLE сонгох форм -->
         <div class="modal-body">
 
             <!-- ROLE тохируулах FORM -->
@@ -62,7 +62,7 @@
             </form>
         </div>
 
-        <!-- Modal Footer — Save / Cancel -->
+        <!-- Modal Footer - Save / Cancel -->
         <div class="modal-footer">
 
             <!-- Хадгалах -->
