--- a/application/raptor/organization/organization-retrieve-modal.html
+++ b/application/raptor/organization/organization-retrieve-modal.html
@@ -1,28 +1,74 @@
+<!-- 
+    ORGANIZATION RETRIEVE MODAL
+    ------------------------------------------------------------
+    Энэ modal нь байгууллагын бүртгэлийн дэлгэрэнгүй мэдээллийг 
+    зөвхөн унших (read-only) хэлбэрээр харуулдаг.
+
+    Дараах мэдээллийг харуулна:
+      • id - дугаар
+      • Нэр
+      • RBAC alias
+      • Parent байгууллага
+      • Лого + хэмжээ
+      • Үүсгэсэн / Шинэчилсэн огноо
+      • Үүсгэсэн / Шинэчилсэн хэрэглэгч
+
+    Bootstrap-ийн:
+      - modal-dialog-centered     → төвд байрлуулна
+      - modal-dialog-scrollable   → доторх контент өндөр их бол скроллтой
+      - modal-lg                  → өргөн modal
+-->
 <div class="modal-lg modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
+
+        <!-- ---------------- Modal Header ---------------- -->
         <div class="modal-header">
-            <h3 class="modal-title fs-6 text-uppercase text-info">{{ record['name'] }}</h3>
-            <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="{{ 'close'|text|e }}"></button>
+            <!-- Гарчиг нь байгууллагын нэр -->
+            <h3 class="modal-title fs-6 text-uppercase text-info">
+                {{ record['name'] }}
+            </h3>
+
+            <!-- Хаах товч -->
+            <button class="btn-close" type="button"
+                    data-bs-dismiss="modal"
+                    aria-label="{{ 'close'|text|e }}">
+            </button>
         </div>
+
+        <!-- ---------------- Modal Body ---------------- -->
         <div class="modal-body">
+
+            <!-- ID -->
             <div class="row">
                 <label class="col-3 col-form-label text-end">ID</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ record['id'] }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ record['id'] }}"
+                           type="text">
                 </div>
             </div>
+
+            <!-- Name -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">{{ 'name'|text }}</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ record['name']|e }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ record['name']|e }}"
+                           type="text">
                 </div>
             </div>
+
+            <!-- Logo -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">{{ 'logo'|text }}</label>
                 <div class="col-9">
                     {% if record.logo %}
+                        <!-- Лого зураг -->
                         <img class="img-fluid img-thumbnail"
-                             src="{{ record['logo'] }}" style="max-height:240px">
+                             src="{{ record['logo'] }}"
+                             style="max-height:240px">
+
+                        <!-- Логогийн хэмжээ (KB) -->
                         {% if record['logo_size'] is not empty %}
                             <div class="text-muted small">
                                 {{ (record['logo_size'] / 1024)|number_format(1, '.', ',') }} KB
@@ -31,46 +77,77 @@
                     {% endif %}
                 </div>
             </div>
+
+            <!-- RBAC Alias -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">RBAC (alias)</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ record['alias']|e }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ record['alias']|e }}"
+                           type="text">
                 </div>
             </div>
+
+            <!-- Parent Organization -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">{{ 'parent'|text }}</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ record['parent_name']|e }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ record['parent_name']|e }}"
+                           type="text">
                 </div>
             </div>
+
+            <!-- Divider -->
             <hr>
+
+            <!-- Created at -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">{{ 'date-created'|text }}</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ record['created_at']|e }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ record['created_at']|e }}"
+                           type="text">
                 </div>
             </div>
+
+            <!-- Created by -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">{{ 'created-by'|text }}</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ (record['rbac_users'][record['created_by']] ?? record['created_by'])|e }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ (record['rbac_users'][record['created_by']] ?? record['created_by'])|e }}"
+                           type="text">
                 </div>
             </div>
+
+            <!-- Updated at -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">{{ 'date-modified'|text }}</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ record['updated_at']|e }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ record['updated_at']|e }}"
+                           type="text">
                 </div>
             </div>
+
+            <!-- Updated by -->
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-end">{{ 'updated-by'|text }}</label>
                 <div class="col-9">
-                    <input class="form-control" disabled value="{{ (record['rbac_users'][record['updated_by']] ?? record['updated_by'])|e }}" type="text">
+                    <input class="form-control" disabled
+                           value="{{ (record['rbac_users'][record['updated_by']] ?? record['updated_by'])|e }}"
+                           type="text">
                 </div>
             </div>
+
         </div>
+
+        <!-- ---------------- Modal Footer ---------------- -->
         <div class="modal-footer">
-            <button class="btn btn-info shadow-sm" data-bs-dismiss="modal" type="button">
+            <button class="btn btn-info shadow-sm"
+                    data-bs-dismiss="modal"
+                    type="button">
                 {{ 'close'|text }}
             </button>
         </div>
